--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,8 @@ services:
   - type: web
     name: todo-list
     runtime: python
-    buildCommand: |
-      pip install -r requirements.txt
-      python manage.py migrate
-    startCommand: gunicorn myproject.wsgi:application
+    buildCommand: pip install -r requirements.txt
+    startCommand: bash -c "python manage.py migrate && gunicorn myproject.wsgi:application"
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: myproject.settings
